[package]
name = "forward-dll-derive"
description = "Forward dll functions."
version = "0.1.10"
edition = "2021"
repository = "https://github.com/hamflx/forward-dll"
license = "MIT"
authors = ["hamflx <a@hamflx.cn>"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
object = "0.30.3"
quote = "1.0.26"
syn = { version = "2.0.12", features = ["full"] }
