[package]
name = "forward-dll"
description = "Forward dll functions."
version = "0.1.15"
edition = "2021"
repository = "https://github.com/hamflx/forward-dll"
license = "MIT"
authors = ["hamflx <a@hamflx.cn>"]
readme = "../README.md"

[dependencies]
windows-sys = { version = "0.48.0", features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_System_LibraryLoader",
] }
forward-dll-derive = { version = "0.1.15", path = "../forward-dll-derive" }
object = "0.30.3"
implib = "0.3.1"
